# face-fft

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
apptainer/: README.md  build.sh  face_fft.def
docs/: SUMMARY.md
notebooks/: 01_generation_assessment.ipynb  02_train_and_evaluate.ipynb  README.md
scripts/: README.md  download_checkpoints.sh  download_checkpoints.slurm  eval.slurm  evaluate.py  example.slurm  generate_dataset.py  generate_dataset.slurm  generate_dataset_v2.slurm  ingest_video_pairs.sh  ingest_video_pairs.slurm  preprocess.sh  run_pipeline.sh  train.py  train.slurm
src/face_fft/data/: dataset.py  deepaction.py  download_deepaction.py  generate.py
src/face_fft/eval/: evaluator.py
src/face_fft/features/: spectral.py
src/face_fft/models/: classifier.py  pipeline.py
src/face_fft/training/: train_deepaction.py  train_deepaction.slurm  trainer.py
tests/: test_data.py  test_deepaction.py  test_ingest_video_pairs.py  test_model.py  test_spectral.py
